--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "framer-motion": "^5.2.0",
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.2"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0-beta.4",
