--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-intersection-observer": "^8.32.2"
+    "react-intersection-observer": "^8.32.2",
+    "swiper": "^7.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0-beta.4",
